[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/GFX/MushroomHut/backdrop.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Cutscene/MushroomHut.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Cutscene/DialogueBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/GFX/MushroomHut/terrarium.png" type="Texture" id=4]
[ext_resource path="res://Assets/GFX/cutscene/Cat.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Glow.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/GFX/Music/Grandma s Theme - The Legend of Zelda The Wind Waker.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/GFX/cutscene/Book/arrow.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "BeginScene"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "EndScene"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.888889 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/CenterContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Backdrop/Trees/RightTrees:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, -2 ),
"update": 0,
"values": [ Vector2( 55.5556, 0 ), Vector2( 555.556, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Backdrop/Trees/LeftTrees:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, -2 ),
"update": 0,
"values": [ Vector2( -55.5556, 0 ), Vector2( -555.556, 0 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Backdrop/Trees/RightTrees:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, -2 ),
"update": 0,
"values": [ Vector2( 55.5556, 0 ), Vector2( 555.556, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Backdrop/Trees/LeftTrees:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, -2 ),
"update": 0,
"values": [ Vector2( -55.5556, 0 ), Vector2( -555.556, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "zoom-in"
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.75, 0.75 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Backdrop:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Move"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/arrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 638.196, 258.913 ), Vector2( 638.196, 273.913 ), Vector2( 638.196, 258.913 ) ]
}

[node name="MushroomHut" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Backdrop" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -234.962
margin_top = -113.081
margin_right = 418.038
margin_bottom = 75.9188
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cat" type="TextureRect" parent="CanvasLayer/Backdrop"]
visible = false
margin_left = 615.172
margin_top = 392.813
margin_right = 837.172
margin_bottom = 616.813
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="DialogueBox" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="arrow" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 638.196, 258.913 )
rotation = 4.71239
scale = Vector2( 0.07, 0.04 )
texture = ExtResource( 8 )

[node name="Button" type="Control" parent="CanvasLayer"]
modulate = Color( 1.1, 1.5, 1.9, 1 )
margin_left = 1.90894
margin_top = 3.81799
margin_right = 41.9089
margin_bottom = 43.818
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Glow" parent="CanvasLayer/Button" instance=ExtResource( 6 )]
visible = false
position = Vector2( 639.933, 410.224 )

[node name="Terrarium" type="TextureButton" parent="CanvasLayer/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 578.261
margin_top = 347.044
margin_right = 660.261
margin_bottom = 430.044
rect_min_size = Vector2( 100, 50 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 838.233, 386.746 )
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BeginScene = SubResource( 1 )
anims/EndScene = SubResource( 2 )
anims/FadeOutCanvas = SubResource( 3 )
anims/MoveTrees = SubResource( 4 )
anims/zoom-in = SubResource( 5 )

[node name="ArrowBobbing" type="AnimationPlayer" parent="."]
autoplay = "Move"
anims/Move = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 7 )
volume_db = -40.0
autoplay = true
[connection signal="mouse_entered" from="CanvasLayer/Button/Terrarium" to="." method="_on_Terrarium_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Button/Terrarium" to="." method="_on_Terrarium_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Button/Terrarium" to="." method="_on_Terrarium_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
